# RobotDesign

./: .gitignore  README.md
Arduino/RoverIntelligent/: RoverIntelligent.ino
Arduino/libraries/Motor_Rover/: MotorRover.cpp  MotorRover.h
RaspberryPi/: goal_detection  goal_detection.cpp  robot_rgb.cpp  video_read  video_read.cpp  wall_detection  wall_detection.cpp
RaspberryPi/camcv/: CMakeCache.txt  CMakeLists.txt  Makefile  arduino_ctrl.cpp  arduino_ctrl.h  camcv  camcv_vid0.cpp  clean.sh  main.cpp
